[gd_scene load_steps=75 format=3 uid="uid://bekvvekgehgcu"]

[ext_resource type="Script" uid="uid://dl6s1606r8b4i" path="res://scripts/esc_menu.gd" id="1_7f7ni"]
[ext_resource type="Texture2D" uid="uid://b3aqpvst1i4q6" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0000.png" id="1_yrc1y"]
[ext_resource type="Texture2D" uid="uid://bvmewjc1k0xr" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0001.png" id="2_7f7ni"]
[ext_resource type="Texture2D" uid="uid://b0mmv34qsh2kx" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0002.png" id="3_gmq7s"]
[ext_resource type="Texture2D" uid="uid://5til556s8d7e" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0003.png" id="4_3jpo3"]
[ext_resource type="Texture2D" uid="uid://v7kwse7pppqo" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0004.png" id="5_nqm7f"]
[ext_resource type="Texture2D" uid="uid://b7fug6tjoy6ya" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0005.png" id="6_e0bj0"]
[ext_resource type="Texture2D" uid="uid://y2jbtdndb7r0" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0006.png" id="7_u8jxn"]
[ext_resource type="Texture2D" uid="uid://i0w7htr4urcs" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0007.png" id="8_kw5pq"]
[ext_resource type="Texture2D" uid="uid://cahujwubl3qnx" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0008.png" id="9_fgr4w"]
[ext_resource type="Texture2D" uid="uid://w8pyd3masgkx" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0009.png" id="10_ufnf1"]
[ext_resource type="Texture2D" uid="uid://ddgo3an63bxyq" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0010.png" id="11_inqrv"]
[ext_resource type="Texture2D" uid="uid://depylma3rsoo5" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0011.png" id="12_v56lc"]
[ext_resource type="Texture2D" uid="uid://mkjnl54xu2ra" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0012.png" id="13_1r1k3"]
[ext_resource type="Texture2D" uid="uid://cdcihbrgcvesr" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0013.png" id="14_vu1w1"]
[ext_resource type="Texture2D" uid="uid://c7aaetuo0e3t8" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0014.png" id="15_wnkr6"]
[ext_resource type="Texture2D" uid="uid://ncmrj8o3472k" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0015.png" id="16_ujlr7"]
[ext_resource type="Texture2D" uid="uid://cd5yjcwqhklyx" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0016.png" id="17_63sj7"]
[ext_resource type="Texture2D" uid="uid://cc7h50ravod12" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0017.png" id="18_bhjcc"]
[ext_resource type="Texture2D" uid="uid://bn4lfigahuccg" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0018.png" id="19_m7brk"]
[ext_resource type="Texture2D" uid="uid://banyft04078nl" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0019.png" id="20_onjsu"]
[ext_resource type="Texture2D" uid="uid://bbx44i7gy28qy" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0020.png" id="21_wful5"]
[ext_resource type="Texture2D" uid="uid://cj0fbsi3a43dw" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0021.png" id="22_2krhx"]
[ext_resource type="Texture2D" uid="uid://bohp7nqu85lh5" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0022.png" id="23_ssyxr"]
[ext_resource type="Texture2D" uid="uid://btsmh4vvcof4p" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0023.png" id="24_mkvrv"]
[ext_resource type="Texture2D" uid="uid://dpcslf5qtse65" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0024.png" id="25_t4i5u"]
[ext_resource type="Texture2D" uid="uid://qptkpqgog0i2" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0025.png" id="26_ddt6v"]
[ext_resource type="Texture2D" uid="uid://b4csjbvkqmlt6" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0026.png" id="27_1ca4e"]
[ext_resource type="Texture2D" uid="uid://ddvbe62bvq0fu" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0027.png" id="28_8tnwt"]
[ext_resource type="Texture2D" uid="uid://batuck8xnipwt" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0028.png" id="29_kqy6g"]
[ext_resource type="Texture2D" uid="uid://d0pnh5cp4xi4" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0029.png" id="30_agabb"]
[ext_resource type="Texture2D" uid="uid://dwde0phw31k11" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0030.png" id="31_nh737"]
[ext_resource type="Texture2D" uid="uid://crfru08busyw1" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0031.png" id="32_ydfor"]
[ext_resource type="Texture2D" uid="uid://fqtbspa7pngn" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0032.png" id="33_egi7d"]
[ext_resource type="Texture2D" uid="uid://clhecay2mdmp0" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0033.png" id="34_clsa7"]
[ext_resource type="Texture2D" uid="uid://i5ykgvnjf6dc" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0034.png" id="35_csicy"]
[ext_resource type="Texture2D" uid="uid://7bygm7yl8yve" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0035.png" id="36_8rxx6"]
[ext_resource type="Texture2D" uid="uid://bdx834vecm8st" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0036.png" id="37_gdp46"]
[ext_resource type="Texture2D" uid="uid://conyxopsk55qp" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0037.png" id="38_ewqj8"]
[ext_resource type="Texture2D" uid="uid://klu8wlwxk3wc" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0038.png" id="39_axj15"]
[ext_resource type="Texture2D" uid="uid://ctm7lth2e6ylg" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0039.png" id="40_brvo3"]
[ext_resource type="Texture2D" uid="uid://dv604ilh7ex8g" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0040.png" id="41_yue0p"]
[ext_resource type="Texture2D" uid="uid://wrkxdvy77vt2" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0041.png" id="42_ht2au"]
[ext_resource type="Texture2D" uid="uid://dees0naudnhcr" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0042.png" id="43_6ljqj"]
[ext_resource type="Texture2D" uid="uid://c04r65cpg5kyl" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0043.png" id="44_a4kak"]
[ext_resource type="Texture2D" uid="uid://b2g4x7vsmwvlr" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0044.png" id="45_unstb"]
[ext_resource type="Texture2D" uid="uid://ooy5qeox3cr8" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0045.png" id="46_nombv"]
[ext_resource type="Texture2D" uid="uid://kc4xc5fcjnuq" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0046.png" id="47_54ble"]
[ext_resource type="Texture2D" uid="uid://cyvt5ib82a5x3" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0047.png" id="48_auwjl"]
[ext_resource type="Texture2D" uid="uid://guxitt4727si" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0048.png" id="49_o3skk"]
[ext_resource type="Texture2D" uid="uid://c5bav6643jnbw" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0049.png" id="50_iym2d"]
[ext_resource type="Texture2D" uid="uid://yy7otmayitfg" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0050.png" id="51_4tx6g"]
[ext_resource type="Texture2D" uid="uid://cq1akqjkupkmi" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0051.png" id="52_37h74"]
[ext_resource type="Texture2D" uid="uid://bibry84mkpuh5" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0052.png" id="53_5g457"]
[ext_resource type="Texture2D" uid="uid://dxbgy40885yeu" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0053.png" id="54_eqe75"]
[ext_resource type="Texture2D" uid="uid://bu3b4y6teg0c" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0054.png" id="55_15q13"]
[ext_resource type="Texture2D" uid="uid://by78bjdga2hlj" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0055.png" id="56_22ava"]
[ext_resource type="Texture2D" uid="uid://nwhu0a1aevfr" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0056.png" id="57_7sgo1"]
[ext_resource type="Texture2D" uid="uid://dqysolg23fnwk" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0057.png" id="58_sjwmw"]
[ext_resource type="Texture2D" uid="uid://daxjqysbfmv0u" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0058.png" id="59_ucb4h"]
[ext_resource type="Texture2D" uid="uid://jcypjyu84iwo" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0059.png" id="60_7si0s"]
[ext_resource type="Texture2D" uid="uid://chqnjw2njap8n" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0060.png" id="61_l5q1e"]
[ext_resource type="Texture2D" uid="uid://bq4la4ucl1b4j" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0061.png" id="62_qv430"]
[ext_resource type="Texture2D" uid="uid://do7tp0smc28km" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0062.png" id="63_3q45s"]
[ext_resource type="Texture2D" uid="uid://cc6c7gaejtfhr" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0063.png" id="64_g3quy"]
[ext_resource type="Texture2D" uid="uid://bbv4pfwqfjgir" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0064.png" id="65_x743h"]
[ext_resource type="Texture2D" uid="uid://5hv12d6b8e70" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0065.png" id="66_amtte"]
[ext_resource type="Texture2D" uid="uid://dmdfpjqc2ndmh" path="res://assets/Phone/mobile_phone_background/mobile_bg2/frame0066.png" id="67_auuyg"]
[ext_resource type="Texture2D" uid="uid://c7qbren4uddpe" path="res://assets/Phone/empty.png" id="68_vce8b"]
[ext_resource type="PackedScene" uid="uid://bvnebqurtlbh4" path="res://scenes/phone/sound_options_container.tscn" id="71_3jpo3"]
[ext_resource type="PackedScene" uid="uid://bp3m0hlvk2sv7" path="res://scenes/blinking.tscn" id="71_gmq7s"]
[ext_resource type="PackedScene" uid="uid://dl7gwr16p3b6j" path="res://scenes/phone/video_options_container.tscn" id="71_nqm7f"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l41tf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_yrc1y")
}, {
"duration": 1.0,
"texture": ExtResource("2_7f7ni")
}, {
"duration": 1.0,
"texture": ExtResource("3_gmq7s")
}, {
"duration": 1.0,
"texture": ExtResource("4_3jpo3")
}, {
"duration": 1.0,
"texture": ExtResource("5_nqm7f")
}, {
"duration": 1.0,
"texture": ExtResource("6_e0bj0")
}, {
"duration": 1.0,
"texture": ExtResource("7_u8jxn")
}, {
"duration": 1.0,
"texture": ExtResource("8_kw5pq")
}, {
"duration": 1.0,
"texture": ExtResource("9_fgr4w")
}, {
"duration": 1.0,
"texture": ExtResource("10_ufnf1")
}, {
"duration": 1.0,
"texture": ExtResource("11_inqrv")
}, {
"duration": 1.0,
"texture": ExtResource("12_v56lc")
}, {
"duration": 1.0,
"texture": ExtResource("13_1r1k3")
}, {
"duration": 1.0,
"texture": ExtResource("14_vu1w1")
}, {
"duration": 1.0,
"texture": ExtResource("15_wnkr6")
}, {
"duration": 1.0,
"texture": ExtResource("16_ujlr7")
}, {
"duration": 1.0,
"texture": ExtResource("17_63sj7")
}, {
"duration": 1.0,
"texture": ExtResource("18_bhjcc")
}, {
"duration": 1.0,
"texture": ExtResource("19_m7brk")
}, {
"duration": 1.0,
"texture": ExtResource("20_onjsu")
}, {
"duration": 1.0,
"texture": ExtResource("21_wful5")
}, {
"duration": 1.0,
"texture": ExtResource("22_2krhx")
}, {
"duration": 1.0,
"texture": ExtResource("23_ssyxr")
}, {
"duration": 1.0,
"texture": ExtResource("24_mkvrv")
}, {
"duration": 1.0,
"texture": ExtResource("25_t4i5u")
}, {
"duration": 1.0,
"texture": ExtResource("26_ddt6v")
}, {
"duration": 1.0,
"texture": ExtResource("27_1ca4e")
}, {
"duration": 1.0,
"texture": ExtResource("28_8tnwt")
}, {
"duration": 1.0,
"texture": ExtResource("29_kqy6g")
}, {
"duration": 1.0,
"texture": ExtResource("30_agabb")
}, {
"duration": 1.0,
"texture": ExtResource("31_nh737")
}, {
"duration": 1.0,
"texture": ExtResource("32_ydfor")
}, {
"duration": 1.0,
"texture": ExtResource("33_egi7d")
}, {
"duration": 1.0,
"texture": ExtResource("34_clsa7")
}, {
"duration": 1.0,
"texture": ExtResource("35_csicy")
}, {
"duration": 1.0,
"texture": ExtResource("36_8rxx6")
}, {
"duration": 1.0,
"texture": ExtResource("37_gdp46")
}, {
"duration": 1.0,
"texture": ExtResource("38_ewqj8")
}, {
"duration": 1.0,
"texture": ExtResource("39_axj15")
}, {
"duration": 1.0,
"texture": ExtResource("40_brvo3")
}, {
"duration": 1.0,
"texture": ExtResource("41_yue0p")
}, {
"duration": 1.0,
"texture": ExtResource("42_ht2au")
}, {
"duration": 1.0,
"texture": ExtResource("43_6ljqj")
}, {
"duration": 1.0,
"texture": ExtResource("44_a4kak")
}, {
"duration": 1.0,
"texture": ExtResource("45_unstb")
}, {
"duration": 1.0,
"texture": ExtResource("46_nombv")
}, {
"duration": 1.0,
"texture": ExtResource("47_54ble")
}, {
"duration": 1.0,
"texture": ExtResource("48_auwjl")
}, {
"duration": 1.0,
"texture": ExtResource("49_o3skk")
}, {
"duration": 1.0,
"texture": ExtResource("50_iym2d")
}, {
"duration": 1.0,
"texture": ExtResource("51_4tx6g")
}, {
"duration": 1.0,
"texture": ExtResource("52_37h74")
}, {
"duration": 1.0,
"texture": ExtResource("53_5g457")
}, {
"duration": 1.0,
"texture": ExtResource("54_eqe75")
}, {
"duration": 1.0,
"texture": ExtResource("55_15q13")
}, {
"duration": 1.0,
"texture": ExtResource("56_22ava")
}, {
"duration": 1.0,
"texture": ExtResource("57_7sgo1")
}, {
"duration": 1.0,
"texture": ExtResource("58_sjwmw")
}, {
"duration": 1.0,
"texture": ExtResource("59_ucb4h")
}, {
"duration": 1.0,
"texture": ExtResource("60_7si0s")
}, {
"duration": 1.0,
"texture": ExtResource("61_l5q1e")
}, {
"duration": 1.0,
"texture": ExtResource("62_qv430")
}, {
"duration": 1.0,
"texture": ExtResource("63_3q45s")
}, {
"duration": 1.0,
"texture": ExtResource("64_g3quy")
}, {
"duration": 1.0,
"texture": ExtResource("65_x743h")
}, {
"duration": 1.0,
"texture": ExtResource("66_amtte")
}, {
"duration": 1.0,
"texture": ExtResource("67_auuyg")
}],
"loop": true,
"name": &"background",
"speed": 120.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yrc1y"]
size = Vector2(47, 20)

[node name="ESC_Menu" type="CanvasLayer"]
script = ExtResource("1_7f7ni")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 712.0
offset_top = 101.0
offset_right = 873.0
offset_bottom = 390.0

[node name="PhoneScreenContainer" type="Control" parent="Control"]
clip_contents = true
anchors_preset = 0
offset_left = 8.0
offset_top = 28.0
offset_right = 154.0
offset_bottom = 295.0

[node name="Background" type="AnimatedSprite2D" parent="Control/PhoneScreenContainer"]
position = Vector2(40.999992, -24)
scale = Vector2(1.0983797, 1.0983795)
sprite_frames = SubResource("SpriteFrames_l41tf")
animation = &"background"
autoplay = "background"
frame_progress = 0.7339462

[node name="Phone" type="Sprite2D" parent="Control"]
position = Vector2(81, 170)
texture = ExtResource("68_vce8b")

[node name="PowerArea" type="Area2D" parent="Control/Phone"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Phone/PowerArea"]
position = Vector2(1, 141)
shape = SubResource("RectangleShape2D_yrc1y")

[node name="MenuContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 405.0
offset_bottom = 295.0

[node name="MenuOptions" type="VBoxContainer" parent="Control/MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 3
alignment = 1

[node name="Continue" type="Button" parent="Control/MenuContainer/MenuOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.9647059, 0.5137255, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.39215687)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Continue"
flat = true

[node name="Save" type="Button" parent="Control/MenuContainer/MenuOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.9647059, 0.5137255, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.39215687)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Save"
flat = true

[node name="Load" type="Button" parent="Control/MenuContainer/MenuOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.9647059, 0.5137255, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.39215687)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Load"
flat = true
alignment = 2

[node name="Options" type="Button" parent="Control/MenuContainer/MenuOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.9647059, 0.5137255, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.39215687)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
text = "Options"
flat = true

[node name="Credits" type="Button" parent="Control/MenuContainer/MenuOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.9647059, 0.5137255, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.39215687)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
text = "Credits"
flat = true

[node name="Quit" type="Button" parent="Control/MenuContainer/MenuOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.9647059, 0.5137255, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.39215687)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
text = "Quit"
flat = true

[node name="OptionsContainer" type="TabContainer" parent="Control"]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 29.0
offset_right = 250.0
offset_bottom = 356.0
scale = Vector2(0.58473665, 0.7939857)
theme_override_font_sizes/font_size = 20
tab_alignment = 1
current_tab = 0

[node name="Sound" parent="Control/OptionsContainer" instance=ExtResource("71_3jpo3")]
layout_mode = 2
metadata/_tab_index = 0

[node name="Video" parent="Control/OptionsContainer" instance=ExtResource("71_nqm7f")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Blinking" parent="Control" instance=ExtResource("71_gmq7s")]
position = Vector2(83, 310)
scale = Vector2(0.15, 0.07)

[connection signal="pressed" from="Control/MenuContainer/MenuOptions/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/MenuContainer/MenuOptions/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/MenuContainer/MenuOptions/Quit" to="." method="_on_quit_pressed"]
